--- a/win32/semilib-lib.vcproj
+++ b/win32/semilib-lib.vcproj
@@ -120,6 +120,9 @@
 			RelativePath="..\utils\Change.h">
 		</File>
 		<File
+			RelativePath="..\utils\CharArray.h">
+		</File>
+		<File
 			RelativePath="..\utils\Cloneable.h">
 		</File>
 		<File
