updrade to boost-1.32.0
git-svn-id: file:///srv/svnroot/semilib/trunk@2028 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/regex/regex-switch.h.in
+++ b/regex/regex-switch.h.in
@@ -1,4 +1,4 @@
-#if @BOOST_DEFINE@ || defined(WIN32)
+#if @WITH_BOOST_REGEX@ || defined(WIN32)
 #include <boost/cregex.hpp>
 	#define RXSPACE boost::
 	using namespace boost;
