--- a/win32/Makefile.am
+++ b/win32/Makefile.am
@@ -2,7 +2,4 @@ EXTRA_DIST = $(wildcard *.dsw *.dsp *.sln *.vcproj)
 
 # convert to DOS line ends
 dist-hook:
-	for n in *.dsw *.dsp *.sln *.vcproj; do mv $$n $$n.bak; todos <$$n.bak >$$n; done
-	rm *.bak
-
-#	rm -rf `find $(distdir)/doc -name CVS`
+	for n in *.dsw *.dsp *.sln *.vcproj; do unix2dos $$n; done
