futzing with pkgconfig files and other stuff
git-svn-id: file:///srv/svnroot/semilib/trunk@2035 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,5 @@
 SUBDIRS = utils regex win32
 INCLUDES = -I../utils -I../regex -I../fuzzy
-EXTRA_DIST = Doxyfile semilib.pc
 
 dist-hook:
 	rm -rf `find $(distdir)/win32 -name CVS`
@@ -19,4 +18,6 @@ install-data-local: doc
 	$(INSTALL_DATA) $(srcdir)/doc/html/* $(prefix)/doc/html
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = semilib.pc semilogger.pc
+pkgconfig_DATA = semilib.pc semilogger.pc semiregex.pc semiutils.pc
+
+EXTRA_DIST = Doxyfile $(pkgconfig_DATA)
