--- a/semiutils.pc.in
+++ b/semiutils.pc.in
@@ -4,7 +4,7 @@ libdir=@libdir@
 includedir=@includedir@
 
 Name: semilib
-Description: Logging framework
+Description: useful stuff only. No logger, no regex.
 Version: @VERSION@
-Libs: -L${libdir} -lutils -llogger
+Libs: -L${libdir} -lutils
 Cflags: -I${includedir}
