Fix pc files to have correct libraries
git-svn-id: file:///srv/svnroot/semilib/trunk@2042 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/semilib.pc.in
+++ b/semilib.pc.in
@@ -6,5 +6,5 @@ includedir=@includedir@
 Name: semilib
 Description: Various useful things for stuff
 Version: @VERSION@
-Libs: -L${libdir} -lutils -llogger -lregex
+Libs: -L${libdir} -lsemiutils -lsemilogger -lsemiregex
 Cflags: -I${includedir}
