Make Singleton usable for classes that don't want to inherit Add LoggerDecorator Add CoutLogger.h
git-svn-id: file:///srv/svnroot/semilib/trunk@2051 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -67,11 +67,13 @@ libsemilogger_la_SOURCES = Logger.cpp FileLogger.cpp
 libsemicoutlogger_la_SOURCES = CoutLogger.cpp
 
 noinst_PROGRAMS = \
+	testCoutLogger \
 	testPredicateResult \
 	testFileLogger \
 	testLogger \
 	testJoin \
 	testRefcount \
+	testSingleton \
 	testTimer \
 	test_strftime
 
@@ -91,3 +93,6 @@ testFileLogger_SOURCES = testFileLogger.cpp
 testFileLogger_LDADD = ${LDADD} libsemilogger.la
 
 test_strftime_SOURCES = test_strftime.cpp
+testSingleton_SOURCES = testSingleton.cpp
+testCoutLogger_SOURCES = testCoutLogger.cpp
+testCoutLogger_LDADD = libsemicoutlogger.la libsemilogger.la libsemiutils.la
