fix pdb location
git-svn-id: file:///srv/svnroot/semilib/trunk@2062 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/win32/logger.vcproj
+++ b/win32/logger.vcproj
@@ -71,7 +71,7 @@
 				RuntimeTypeInfo="TRUE"
 				PrecompiledHeaderFile=""
 				AssemblerListingLocation="$(IntDir)/"
-				ProgramDataBaseFileName="$(IntDir)/"
+				ProgramDataBaseFileName="$(OutDir)/$(ProjectName).pdb"
 				WarningLevel="3"
 				SuppressStartupBanner="TRUE"
 				DebugInformationFormat="4"
