--- a/win32/semilib-lib.vcproj
+++ b/win32/semilib-lib.vcproj
@@ -78,7 +78,7 @@
 				RuntimeTypeInfo="TRUE"
 				PrecompiledHeaderFile="$(IntDir)/$(ProjectName).pch"
 				AssemblerListingLocation="$(IntDir)/"
-				ProgramDataBaseFileName="$(IntDir)/"
+				ProgramDataBaseFileName="$(OutDir)/$(ProjectName).pdb"
 				WarningLevel="3"
 				SuppressStartupBanner="TRUE"
 				DebugInformationFormat="4"
