--- a/win32/semilib-lib.vcproj
+++ b/win32/semilib-lib.vcproj
@@ -38,6 +38,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
+				AdditionalDependencies="boost_regex_vc7_mds.lib"
 				OutputFile="$(OutDir)/$(ProjectName).lib"
 				IgnoreAllDefaultLibraries="TRUE"/>
 			<Tool
@@ -87,6 +88,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
+				AdditionalDependencies="boost_regex_vc7_mds.lib"
 				OutputFile="$(OutDir)/$(ProjectName).lib"
 				IgnoreAllDefaultLibraries="TRUE"/>
 			<Tool
