remove docs, make sure CoutLogger is in dist
git-svn-id: file:///srv/svnroot/semilib/trunk@2067 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/Makefile.am
+++ b/Makefile.am
@@ -13,9 +13,11 @@ clean-local:
 docs:
 	doxygen
 
-install-data-local: docs
+install-docs:
 	$(INSTALL_DATA) -d -m 0755 $(prefix)/doc/html
 	$(INSTALL_DATA) $(srcdir)/doc/html/* $(prefix)/doc/html
+
+install-data-local:
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = semilib.pc semilogger.pc semiregex.pc semiutils.pc
