add testTemplate from eve
git-svn-id: file:///srv/svnroot/semilib/trunk@2231 a19b6091-82f5-0310-b5c5-f4b00232789b

--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -78,7 +78,8 @@ noinst_PROGRAMS = \
 	testRefcount \
 	testSingleton \
 	testTimer \
-	test_strftime
+	test_strftime \
+	testTemplate
 
 testPredicateResult_SOURCES = testPredicateResult.cpp
 testPredicateResult_LDADD = ${LDADD} libsemilogger.la libsemicoutlogger.la
@@ -97,5 +98,9 @@ testFileLogger_LDADD = ${LDADD} libsemilogger.la
 
 test_strftime_SOURCES = test_strftime.cpp
 testSingleton_SOURCES = testSingleton.cpp
+
 testCoutLogger_SOURCES = testCoutLogger.cpp
 testCoutLogger_LDADD = libsemicoutlogger.la libsemilogger.la libsemiutils.la
+
+testTemplate_SOURCES = testTemplate.cpp
+testTemplate_LDADD = libsemicoutlogger.la libsemilogger.la libsemiutils.la
